# yolo-fine-tuning-pipeline

./: .gitignore  AGENTS.md  Justfile  README.md  cli.py  config.toml  pyproject.toml
dataset/annotation/: manifest.json
dataset/annotation/labels/train2017/: image.txt
dataset/augmented/: classes.json  manifest.json
dataset/augmented/labels/train2017/: augmented_01f9efc20aa03b96.txt  augmented_0386f9bc70258f61.txt  augmented_0a658741cf5bd4ff.txt  augmented_0e2c4b9d7b2287fa.txt  augmented_15b5e8e950e14aa2.txt  augmented_17067a671dd75863.txt  augmented_21a430e7d14d6a75.txt  augmented_2ad646c1e3e5c74d.txt  augmented_2e0f982ee7c72f88.txt  augmented_307402a0b878da16.txt  augmented_3f9016574f4fa9e0.txt  augmented_4338d084a53cd6e7.txt  augmented_491460e6848c995a.txt  augmented_4fd22f947c7c89f4.txt  augmented_503b3d3f255bd520.txt  augmented_52c8d64f3c3328bf.txt  augmented_5aa9f269ef3b58d2.txt  augmented_5b25cdc07e9eecce.txt  augmented_5e1e810786c6dad4.txt  augmented_5f3e1513c5fd8d90.txt  augmented_67f812ee836aaca7.txt  augmented_688e1f89f0d785d8.txt  augmented_716197a158f00e65.txt  augmented_74f40d03e8f2156f.txt  augmented_794e7ac5bd3e607f.txt  augmented_798d138b6cf0f15c.txt  augmented_7b086ceeeb5285d7.txt  augmented_827874d66420f1ea.txt  augmented_8be3dce1edb48b43.txt  augmented_95af68dbe5bfd5cb.txt  augmented_9b92b552f3e546c0.txt  (+27 more)
dataset/coco128/: dataset.yaml  manifest.json
dataset/coco128/labels/: train2017.cache
src/: annotate.py  augment.py  clean.py  common.py  config.py  eval.py  fetch.py  infer.py  setup.py  tracking.py  train.py  visualize.py  watch.py
